# farmix

./: .env.example  .gitignore  deploy.sh  manage.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: ci.yml  master_farmix.yml
apps/core/: admin.py  backends.py  context_processors.py  decorators.py  fields.py  forms.py  middleware.py  models.py  services.py  urls.py  validators.py  views.py
apps/inventory/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/invoicing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/orders/: admin.py  filters.py  forms.py  models.py  services.py  urls.py  views.py
apps/production/: admin.py  forms.py  models.py  services.py  urls.py  views.py
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docs/: USER_MANUAL.md  guia_utilizacao.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: create_superuser.py  seed_data.py
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/components/: _badge.html  _card.html  _form_field.html  _modal.html  _password_hints.html  _table.html
templates/core/: audit_log.html  dashboard.html  invitation_form.html  invitation_list.html  profile.html  user_form.html  user_list.html
templates/emails/: invitation.html
templates/includes/: _nav.html
templates/inventory/: alerts.html  lot_adjust.html  lot_detail.html  lot_form.html  lot_list.html  material_detail.html  material_form.html  material_list.html  movements.html  prohibited_form.html  prohibited_list.html  supplier_detail.html  (+2 more)
(+92 files in other folders)
